src/test/ui/unsafe/unsafe-around-compiler-generated-unsafe.stderr
error: unnecessary `unsafe` block
  --> $DIR/unsafe-around-compiler-generated-unsafe.rs:6:5
   |
LL |     unsafe { println!("foo"); }
   |     ^^^^^^ unnecessary `unsafe` block
   |
note: lint level defined here
  --> $DIR/unsafe-around-compiler-generated-unsafe.rs:3:9
   |
LL | #![deny(unused_unsafe)]
   |         ^^^^^^^^^^^^^

error: aborting due to previous error

