src/test/ui/unsafe/unsafe-around-compiler-generated-unsafe.rs
// issue #12418

#![deny(unused_unsafe)]

fn main() {
    unsafe { println!("foo"); } //~ ERROR unnecessary `unsafe`
}
